Projeto Final, finalizado!

--- a/Card Game/game/caracteristicas/.gitignore
+++ b/Card Game/game/caracteristicas/.gitignore
@@ -3,3 +3,7 @@
 /TipoJoias.class
 /TipoCombatentes.class
 /TipoArmasArmaduras.class
+/ChancesAtaqDef.class
+/FraquezasCombatentes.class
+/FraquezasArmasArmaduras.class
+/VantagensCombatentes.class
